Fixed issue where expansion panels stayed visible despite root element being hidden.

--- a/pocs/dag-ui-angular/src/app/node-info/node-info.component.scss
+++ b/pocs/dag-ui-angular/src/app/node-info/node-info.component.scss
@@ -26,3 +26,6 @@
   border-radius: 0;
 }
 
+.invisible-node-info {
+  visibility: hidden !important;
+}
